<resources>
    <string name="app_name">NumCompSim</string>

    <string name="question_mark">\?</string>
    <string translatable="false"  name="game_services_project_id">609404540906</string>
    <string name="welcome_title">"Состав Числа - Тренажер"</string>
    <string name="game_rules">
        <b>Правила игры:</b> Перед тобой будут <b>3 картинки</b>, две ниже и одна вверху.
        В двух из них будут числа. Нужно сделать так,
        чтобы <b>сумма чисел</b> из двух нижних картинок
        была такой же как число на верхней картинке.\n\n
        <b>Например</b>, если на верхней картинке число <b>7</b>,
        а на одной из нижних картинок <b>вопросительный знак</b>,
        а на другой - число <b>4</b>, то мы должны понимать,
        что на месте вопросительного знака должно быть число <b>3</b>,
        потому что <b>3 + 4 = 7</b>.\n\n
        <b>Твоя задача - найти правильное число, чтобы сумма была верной!</b>"
    </string>
    <string name="button_understand">Я ГОТОВ!</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выбери свой уровень сложности!</string>
    <string name="easy_level">Легкий (0–10)</string>
    <string name="normal_level">Средний (0–20)</string>
    <string name="hard_level">Тяжелый (0–30)</string>
    <string name="test_level">Тестовый</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="imgCub" translatable="false">imgCub</string>
    <string name="imgGirl" translatable="false">imgGirl</string>
    <string name="imgBack" translatable="false">imgBack</string>
    <string name="equal">=</string>
    <string name="plus">+</string>

</resources>