<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".presentation.ChooseLevelFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="47dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cuub_1" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/choose_level_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/button_level_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/choose_button"
                android:text="@string/test_level"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <Button
                android:id="@+id/button_level_easy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/easy_level"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/button_level_test"
                app:layout_constraintStart_toStartOf="@+id/button_level_test"
                app:layout_constraintTop_toBottomOf="@+id/button_level_test" />

            <Button
                android:id="@+id/button_level_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/normal_level"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/button_level_test"
                app:layout_constraintStart_toStartOf="@+id/button_level_test"
                app:layout_constraintTop_toBottomOf="@+id/button_level_easy" />

            <Button
                android:id="@+id/button_level_hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/hard_level"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/button_level_test"
                app:layout_constraintStart_toStartOf="@+id/button_level_test"
                app:layout_constraintTop_toBottomOf="@+id/button_level_normal" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="230dp"
                android:layout_height="150dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_level_hard"
                app:layout_constraintVertical_bias="0.748"
                app:srcCompat="@drawable/girl_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>